# critical-minerals-data-tools

./: .gitignore  260210_Dataset_Ownership_Licensing.csv  README.md
.github/workflows/: lint.yml  test.yml
ArXiv_MCP/: README.md  TUTORIAL.md  pyproject.toml  requirements.txt  setup.sh  test_client.py
ArXiv_MCP/images/: arxiv-mcp-workflow.mmd  data-flow.mmd  mcp-sequence.mmd
ArXiv_MCP/src/arxiv_mcp/: __init__.py  server.py  server_sdk.py
BGS_MCP/: pyproject.toml  test_ollama.py  test_openai.py
BGS_MCP/src/bgs_mcp/: __init__.py  api.py  bgs_client.py  server.py
CLaiMM/: bgs_download.py  pyproject.toml
CLaiMM/src/claimm_mcp/: __init__.py  config.py  edx_client.py  header_detector.py  llm_client.py  server.py  server_agnostic.py
CMM_API/: README.md  pyproject.toml  test_ollama.py  test_openai.py
CMM_API/src/cmm_api/: __init__.py  clients.py  config.py  mcp_server.py  server.py
Data_Types/: schema_mapping.py
GoogleScholar_MCP/: README.md  pyproject.toml
GoogleScholar_MCP/src/google_scholar_mcp/: __init__.py  server.py  tool_schemas.py
OSTI_MCP/: pyproject.toml
OSTI_MCP/src/osti_mcp/: __init__.py  client.py  server.py
UNComtrade_MCP/: pyproject.toml
UNComtrade_MCP/src/uncomtrade_mcp/: __init__.py  client.py  models.py  server.py
UNComtrade_MCP/tests/: test_client.py
docs/examples/: demo.ipynb
scripts/: run_tests.sh
