[project]
name = "cmm-api"
version = "0.1.0"
description = "Unified REST API for Critical Minerals and Materials - Combines CLAIMM (NETL EDX) and BGS World Mineral Statistics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmm-data>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=2.14.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
cmm-api = "cmm_api.server:main"
cmm-mcp = "cmm_api.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmm_api"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E402",    # module import not at top of file (intentional in some modules)
    "E501",    # line too long (strings; ruff format handles code lines)
    "PLC0415", # import not at top level (intentional in test/main functions)
    "ERA001",  # commented-out code
    "PTH123",  # builtin-open (prefer pathlib.Path.open eventually)
    "RUF012",  # mutable-class-default (ClassVar annotation)
    "B904",    # raise-without-from-inside-except
    "B007",    # unused-loop-control-variable
    "PLW0603", # global-statement
    "ARG001",  # unused-function-argument
    "ARG002",  # unused-method-argument
    "PLR0911", # too-many-return-statements
    "SIM117",  # multiple-with-statements
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLC0415"]
"**/test_*" = ["PLC0415"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
