[project]
name = "google-scholar-mcp"
version = "1.0.0"
description = "MCP server for Google Scholar search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "cmm-data>=0.1.0",
]

[tool.uv.sources]
cmm-data = { path = "../../cmm-data" }

[project.scripts]
google-scholar-mcp = "google_scholar_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_scholar_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E402",
    "E501",
    "PLC0415",
    "ERA001",
    "PTH123",
    "RUF012",
    "B904",
    "B007",
    "PLW0603",
    "ARG001",
    "ARG002",
    "PLR0911",
    "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLC0415"]
"**/test_*" = ["PLC0415"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
