[project]
name = "osti-mcp"
version = "0.1.0"
description = "MCP Server for OSTI (Office of Scientific and Technical Information) - Access DOE technical reports and publications on critical minerals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
osti-mcp = "osti_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osti_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E402",    # module import not at top of file (intentional in some modules)
    "PLC0415", # import not at top level (intentional in test/main functions)
    "ERA001",  # commented-out code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLC0415"]
"**/test_*" = ["PLC0415"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
